--- a/dev/pug/includes/main-header.pug
+++ b/dev/pug/includes/main-header.pug
@@ -1,5 +1,6 @@
 // ----------- main headers -----------  
 header.main-header
+  div.l-container
     div.main-header__block
       // -------- logo ------- 
       img.logo(src="/images/logo-white.png" alt="Logo de la página")
