--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -8,6 +8,7 @@
   border-radius: 1em;
   overflow: hidden;
   box-shadow: $shadow;
+  div.l-container {}
   .container { position: relative; }
   &__hero-image {
     position: absolute;
