--- a/dev/pug/mixins/banner-mixin.pug
+++ b/dev/pug/mixins/banner-mixin.pug
@@ -1,9 +1,10 @@
 mixin banner(image, title, description)
   // ------------ banner ----------- 
-  .main-banner.l-section
-    img(class="main-banner__hero-image" src=image alt="Banner principal")
-    .banner__grid.container
-      .content-text
-        h1(class="main-banner__title")= title.toUpperCase()
-        p(class="main-banner__description")= description
-      block
+  section.main-banner.l-section
+    div.l-container
+      img(class="main-banner__hero-image" src=image alt="Banner principal")
+      .banner__grid.container
+        .content-text
+          h1(class="main-banner__title")= title.toUpperCase()
+          p(class="main-banner__description")= description
+        block
