--- a/dev/scss/components/_about-us.scss
+++ b/dev/scss/components/_about-us.scss
@@ -2,7 +2,6 @@
     $About us
 \--------------------------*/
 .about-us {
-  display: flex;
   flex-direction: column;
   // flex-wrap: wrap; // Desktop style.
   text-align: center;
@@ -14,6 +13,8 @@
     // display: flex;
     // justify-content: flex-end;
     // width: 100%;
+    width: 100%;
+
   }
     &__subtitle {
       // Dektop style.
@@ -25,6 +26,7 @@
     }
   
   .container-image {
+    width: 100%;
     // Desktop style.
     // display: flex;
     // flex-basis: 40%;
