--- a/dev/scss/components/_ads-business.scss
+++ b/dev/scss/components/_ads-business.scss
@@ -1,6 +1,7 @@
 .business {
   &__subtitle {
-    color: var(--color-primary);
     margin: 0;
+    color: var(--color-primary);
+    width: 100%;
   }
 }
