--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -10,11 +10,14 @@
   height: $header-height;
   box-shadow: $shadow;
   z-index: var(--z-tooltip);
-
+  
+  div.l-container {}
   &__block {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
   }
   .logo {
     width: 4em;
