--- a/dev/scss/layout/_layout.scss
+++ b/dev/scss/layout/_layout.scss
@@ -3,11 +3,9 @@
 \*-----------------------*/
 main { padding-top: $header-height + 2; }
 .l-container {
-  // outline: 2px dotted steelblue; // test
+  outline: 2px dotted steelblue; // test
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
   max-width: $max-width;
   height: 100%;
   display: flex;
