Añade enlaces a hacia secciones internas de la page.

--- a/dev/pug/config/variables.pug
+++ b/dev/pug/config/variables.pug
@@ -13,17 +13,17 @@
     },
     {
       title: 'Nosotros',
-      url: '#',
+      url: '#aboutUs',
       child: []
     },
     {
       title: 'Servicios',
-      url: '#',
+      url: '#services',
       child: []
     },
     {
       title: 'Ver otros negocios',
-      url: '#',
+      url: '#adsBusiness',
       child: []
     }
   ]
