--- a/dev/pug/includes/section-aboutUs.pug
+++ b/dev/pug/includes/section-aboutUs.pug
@@ -2,7 +2,7 @@
 section.about-us.l-section
   div.l-container
     div.container-subtitle
-      h2.about-us__subtitle= `${'Nosotros'.toUpperCase()}`
+      h2.about-us__subtitle#aboutUs= `${'Nosotros'.toUpperCase()}`
     div.container-image
       img.about-us__image(src="/images/section-about-us.svg", alt="Imagen de la sección Nosotros")
     
