--- a/dev/pug/includes/section-business.pug
+++ b/dev/pug/includes/section-business.pug
@@ -1,7 +1,7 @@
 // ------------- section business ---------------- 
 section.business.l-section
   div.l-container
-    h2(class="business__subtitle  center-content")= 'Otros negocios (example ads)'.toUpperCase()
+    h2(class="business__subtitle  center-content" id="adsBusiness")= 'Otros negocios (example ads)'.toUpperCase()
     +glide([
       {
         businessName: 'Item 1',
