Crea el menu responsive para pantallas más grandes.

--- a/dev/pug/includes/main-header.pug
+++ b/dev/pug/includes/main-header.pug
@@ -1,5 +1,5 @@
 // ----------- main headers -----------  
-header.main-header
+header.main-header.l-section
   div.l-container
     div.main-header__block
       // -------- logo ------- 
