--- a/dev/scss/layout/_layout.scss
+++ b/dev/scss/layout/_layout.scss
@@ -1,9 +1,9 @@
 /*-----------------------*\
     $Layout
 \*-----------------------*/
-main { padding-top: $header-height + 2; }
+// main { padding-top: $header-height - 1; }
 .l-container {
-  outline: 2px dotted steelblue; // test
+  // outline: 2px dotted steelblue; // test
   margin-left: auto;
   margin-right: auto;
   max-width: $max-width;
@@ -13,8 +13,6 @@ main { padding-top: $header-height + 2; }
 }
 .l-section {
   // outline: 2px dotted tomato; // test
-  margin-left: 1em;
-  margin-right: 1em;
   margin-bottom: 5.5rem; // 88px
 }
 .center-block {
