--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -1,7 +1,10 @@
 *,
+*:after,
+*:before,
 *::after,
 *::before { box-sizing: border-box; }
 body {
+  padding: 2rem 1rem 1rem;
   background-color: var(--color-bg);
   font-family: 'Roboto', Arial;
   font-size: var(--font-content);
