Actualiza los padding.

--- a/dev/pug/includes/main-header.pug
+++ b/dev/pug/includes/main-header.pug
@@ -1,6 +1,5 @@
 // ----------- main headers -----------  
-header.main-header.l-section
-  div.l-container
+header.main-header.l-section.l-container
     div.main-header__block
       // -------- logo ------- 
       img.logo(src="/images/logo-white.png" alt="Logo de la página")
