--- a/dev/pug/includes/main-footer.pug
+++ b/dev/pug/includes/main-footer.pug
@@ -6,16 +6,16 @@ footer.main-footer.l-section.shadow
       
       div.main-footer__contact
         h3= 'Contactanos'.toUpperCase()
-        +buttonContact('button-social-secondary', 'icon-whatsapp-white', '+52 981 2345678')
+        +buttonContact('button-social-secondary', 'icon-whatsapp-white', '+52 981 234 5678')
         +buttonContact('button-social-secondary', 'icon-mail-white', 'inoutisolucionesti@gmail.com')
 
       div.main-footer__socialnetworks
         h3= 'En redes'.toUpperCase()
         +buttonContact('button-social-secondary', 'icon-facebook-white', '@inoutisoluciones')
 
-      div.main-footer__services
+      div(class="main-footer__services") 
         h3= 'Nuestros Servicios'.toUpperCase()
-        ul
+        ul.center-content
           li ✅ Soporte a usuarios y equipos.
           li ✅ Mantenimiento del equipo de cómputo.
           li ✅ Diseño y desarrollo Web.
