--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -1,6 +1,3 @@
-%cursor-pointer {
-  cursor: pointer;
-}
 .main-header {
   justify-content: space-between;
   flex-wrap: nowrap;
@@ -18,30 +15,15 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    @include from(medium) {
-      width: initial;
-    }
+
+    @include from(medium) { width: initial; }
   }
-  .logo {
-    width: 4em;
-    @extend %cursor-pointer;
-  }
-  .main-menu-icon {
-    width: $header-height /  2 + .5;
-    height: $header-height / 2;
-    background-image: linear-gradient(
-      $color-text 20%, 
-      transparent 20%, transparent 40%, 
-      $color-text 40%, $color-text 60%, 
-      transparent 60%, transparent 80%, 
-      $color-text 80%
-    );
+  .logo { width: 4em; }
+  .icon-menu {
     transition: all .3s;
-    @extend %cursor-pointer;
+    cursor: pointer;
     &:active { transform: scale(.90);}
-    @include from(medium) {
-      display: none;
-    }
+    @include from(medium) { display: none; }
   }
 }
 
