--- a/dev/scss/config/_mixins.scss
+++ b/dev/scss/config/_mixins.scss
@@ -10,6 +10,7 @@
     @content;
     color: $color;
     background-image: url($pathIcon);
+    background-repeat: no-repeat;
     filter: $color;
   }
 }
