--- a/dev/pug/includes/main-header.pug
+++ b/dev/pug/includes/main-header.pug
@@ -1,9 +1,9 @@
 // ----------- main headers -----------  
 header.main-header.l-section.l-container
+
     div.main-header__block
-      // -------- logo ------- 
       img.logo(src="/images/logo-white.png" alt="Logo de la página")
-      div(class="main-menu-icon" id="js-menu-icon")
+      div(class="icon-menu" id="js-icon-menu-open")
     // ------------ main nav ------------------- 
     nav(class="main-nav" id="js-nav")
       include /includes/menu
