--- a/dev/scss/components/_icons.scss
+++ b/dev/scss/components/_icons.scss
@@ -1,5 +1,6 @@
 $color-primary: invert(66%) sepia(25%) saturate(6026%) hue-rotate(360deg) brightness(103%) contrast(105%);
 $color-second: invert(45%) sepia(87%) saturate(2573%) hue-rotate(5deg) brightness(98%) contrast(100%);
+$color-accent: invert(34%) sepia(41%) saturate(6939%) hue-rotate(219deg) brightness(99%) contrast(104%);
 $color-white: invert(100%) sepia(0%) saturate(7500%) hue-rotate(8deg) brightness(107%) contrast(96%);
 $color-whatsapp: invert(70%) sepia(8%) saturate(7168%) hue-rotate(71deg) brightness(93%) contrast(54%);
 $color-facebook: invert(33%) sepia(70%) saturate(4356%) hue-rotate(197deg) brightness(95%) contrast(80%);
@@ -15,8 +16,20 @@ $color-gmail: invert(32%) sepia(78%) saturate(2179%) hue-rotate(341deg) brightne
       margin-right: 1em;
       min-width: 1.5em;
       min-height: 1.5em;
-      filter: $color-white;
   } 
+}
+
+.icon-menu {
+  @include addIcon('/images/icon-menu-open.svg', $color-white) {
+    margin-right: 0;
+    min-width: $header-height - 1.25;
+    min-height: $header-height - 1.25;
+  }
+}
+.icon-menu-close {
+  @include addIcon('/images/icon-menu-close.svg', $color-accent) {
+    margin-right: 0;
+  }
 }
 .icon-arrow-left {
   @include addIcon('/images/icon-arrow-back.svg', $color-second) {
