--- a/dev/scss/components/_menu.scss
+++ b/dev/scss/components/_menu.scss
@@ -1,55 +1,64 @@
 .main-nav {
   position: fixed;
   top: 0;
-  left: -100%;
   bottom: 0;
-  background-color: var(--color-text2);
-  width: 70vw;
-  @include from(400px) {
-    width: 72vw;
-  }
-  @include from(440px) {
-    width: 75vw;
-  }
-  @include from(500px) {
-    width: 78vw;
-  }
-  @include from(540px) {
-    width: 81vw;
-  }
-  @include from(640px) {
-    width: 84vw;
-  }
-  transition: left .3s;
+  left: -100%;
+  width: 100%;
+  background-color: rgba($color-text, .90);
   z-index: var(--z-tooltip);
+  transition: left .3s;
 
-  &.show { left: 0; }
+  &.showNav { left: 0; }
 
   @include from(medium) {
     position: initial;
     top: initial;
     left: 0;
-    background-color: initial;
+    background-color: transparent;
     width: initial;
   }
 }
 
 .menu {
+  --margin-link: 2em;
+  position: relative;
+  top: 0;
+  left: 0;
   margin-top: 0;
   margin-bottom: 0;
+  padding-top: 1em;
   padding-left: 0;
-  padding-top: $header-height;
+  background-color: var(--color-text);
+  width: 90%;
+  height: 100%;
+
   @include from (medium) {
     display: flex;
     padding-top: initial;
+    background-color: initial;
+    width: initial;
     height: 100%;
   }
-  
+
+  .icon-menu-close {
+    border-radius: .5em;
+    margin-left: var(--margin-link);
+    margin-bottom: $header-height;
+    padding: 2em 3em;
+    width: 2em;
+    height: 2em;
+    background-color: var(--color-text2);
+    cursor: pointer;
+    transition: all .3s;
+    box-shadow: rgba($color-text2, .6) 0 .3125em .625em; // 0 5px 10px
+
+    &:active { transform: scale(.90); }
+    @include from(medium) { display: none; }
+  }
   &__item { list-style-type: none; }
   &__link {
-    // outline: 1px solid tomato;
     display: flex;
-    padding-left: 2em;
+    padding-left: var(--margin-link);
     padding-top: 1.5em;
     padding-bottom: 1.5em;
     color: var(--color-primary);
@@ -58,7 +67,7 @@
 
     &:hover {
       color: var(--color-accent);
-      background-color: var(--color-text);
+      background-color: var(--color-text2);
       text-decoration: underline;
     }
     @include from(medium) {
