Configura los archivos statico para mostra una preview de la page con github pages.

--- a/dev/pug/includes/section-aboutUs.pug
+++ b/dev/pug/includes/section-aboutUs.pug
@@ -2,7 +2,7 @@
 section.about-us.l-section
   div.l-container
     div.container-image
-      img.about-us__image(src="/images/section-about-us.svg", alt="Imagen de la sección Nosotros")
+      img.about-us__image(src="images/section-about-us.svg", alt="Imagen de la sección Nosotros")
     
     div.about-us__content
       h2.about-us__subtitle#aboutUs= `${'Nosotros'.toUpperCase()}`
