--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -16,12 +16,12 @@ html(lang="es")
     meta(name="description" content=metaDescription)
     meta(name="theme-color" content=metaColor)
     block styles
-      link(rel="stylesheet" href="/css/style.css")
-      link(rel="shortcut icon" href="/public/images/favicon.png")
+      link(rel="stylesheet" href="css/style.css")
+      link(rel="shortcut icon" href="images/favicon.png")
     block fonts
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
-      <link rel="icon" href="/images/logo-white.png">
+      <link rel="icon" href="images/logo-white.png">
     
   body
     include /includes/main-header
@@ -33,6 +33,6 @@ html(lang="es")
     include /includes/main-footer
     
     block scripts
-      script(src="/js/clamp.js")
-      script(src="/js/script.js")
+      script(src="js/clamp.js")
+      script(src="js/script.js")
       script(src="https://polyfill.io/v3/polyfill.min.js?features=default")
