--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -2,7 +2,21 @@ extends /config/template
 
 block main
   +banner('/images/banner-image.jpg', 'Inouti', 'Empresa de tecnología 100% campechana, brindamos respuestas integrales acorde a sus necesidades. Tenemos como objetivo ofrecer soluciones informáticas, dando un diagnóstico preciso y atención personalizada.')
-    +form('Hotspot login', 'Escribe tu nombre de usuario', 'Escribe tu contraseña', 'Activar internet')
+    +form('Hotspot login', 'Activar internet', [
+      {
+        placeholder: 'Escribe tu nombre de usuario.',
+        itype: 'text',
+        id: 'js-inputName',
+        name: 'userName'
+      },
+      {
+        placeholder: 'Escribe tu contraseña.',
+        itype: 'password',
+        id: 'js-inputPass',
+        name: 'userPass'
+      }
+    ])
+
   include /includes/section-aboutUs
   include /includes/section-services
   include /includes/section-business
