Se añade la funcionalidad que al dar clic en uno de los enlaces del menu movil, el menu se cierra.

--- a/dev/pug/includes/main-header.pug
+++ b/dev/pug/includes/main-header.pug
@@ -1,9 +1,8 @@
 // ----------- main headers -----------  
 header.main-header.l-section.l-container
-
     div.main-header__block
       img.logo(src="/images/logo-white.png" alt="Logo de la página")
-      div(class="icon-menu" id="js-icon-menu-open")
+      div(class="icon-menu" id="js-menu-open")
     // ------------ main nav ------------------- 
     nav(class="main-nav" id="js-nav")
       include /includes/menu
