--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -4,12 +4,14 @@ block main
   +banner('/images/banner-image.jpg', 'Inouti', 'Empresa de tecnología 100% campechana, brindamos respuestas integrales acorde a sus necesidades. Tenemos como objetivo ofrecer soluciones informáticas, dando un diagnóstico preciso y atención personalizada.')
     +form('Hotspot login', 'Activar internet', [
       {
+        icon: 'icon-user',
         placeholder: 'Escribe tu nombre de usuario.',
         itype: 'text',
         id: 'js-inputName',
         name: 'userName'
       },
       {
+        icon: 'icon-pass',
         placeholder: 'Escribe tu contraseña.',
         itype: 'password',
         id: 'js-inputPass',
