--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -1,7 +1,7 @@
 block config
   include variables
   include /mixins/banner-mixin
-  include /mixins/form-mixin
+  include /mixins/form
   include /mixins/button-contact-mixin
   include /mixins/card-services
   include /mixins/card-business
