--- a/dev/scss/components/_form.scss
+++ b/dev/scss/components/_form.scss
@@ -1,19 +1,27 @@
-.form {
+// 👀 La clase ".form" es un container div, no es un "tag form".
+.form-container {
   border-radius: .5em;
   background-color: var(--color-text);
   padding: 2.5em 1.5em;
   @include from(medium) { padding: 5.5em 2em; }
 
-  form > *:not(:last-child) { margin-bottom: 1em; }
-  &__title {
+  .title {
     display: block;
     margin-bottom: 2.5em;
     color: #fff;
     font-size: calc(var(--h2-font-size) - .5em);
     font-family: var(--font-title);
-    text-align: center;
     letter-spacing: var(--letter-spacing);
   }
+  .text {
+    margin-top: 2em;
+    color: var(--color-primary);
+  }
+}
+
+
+.form {
+  > *:not(:last-child) { margin-bottom: 1em; }
   &__input {
     display: flex;
     border-radius: .5em;
