Actualiza la clase.

--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -47,7 +47,7 @@
     text-align: center;
     @extend %text-white;
   }
-  div.form {
+  .form-container {
     @include from(medium) {
       flex-basis: 40%;
     }
