Agrega fuentes locales para la page.

--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -1,4 +1,9 @@
 /*--------------------------\
+    $Theme
+\--------------------------*/
+@import "theme/fonts";
+
+/*--------------------------\
     $Config
 \--------------------------*/
 @import "config/functions";
