--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -6,8 +6,8 @@
 body {
   padding: 2rem 1rem 1rem;
   background-color: var(--color-bg);
-  font-family: 'Roboto', Arial;
-  font-size: var(--font-content);
+  font-family: var(--font-content);
+  font-size: var(--body-font-size);
 }
 img {
   display: block;
