--- a/dev/scss/config/_variables.scss
+++ b/dev/scss/config/_variables.scss
@@ -29,13 +29,13 @@ $color-white: #FAFAFA;
 
 /* typography */
 :root {
-  --font-title: Montserrat, arial;
-  --font-content: roboto, arial;
+  --font-title: 'Montserrat-Bold', arial;
+  --font-content: 'Roboto-Regular', arial;
   --letter-spacing: 0.09375em; // 1.5px 
   --h1-font-size: 1.953em;
   --h2-font-size: 1.563em;
   --h3-font-size: 1.25em;
-  --body-font-size: 1em;
+  --body-font-size: 16px; // 1em
   --smaller-font-size: .8em;
   --small-font-size: .64em;
 
