Actualiza los padding para que el menu no se  pegue al logo.

--- a/dev/pug/config/variables.pug
+++ b/dev/pug/config/variables.pug
@@ -22,7 +22,7 @@
       child: []
     },
     {
-      title: 'Ver otros negocios',
+      title: 'Negocios Ads',
       url: '#adsBusiness',
       child: []
     }
