--- a/dev/scss/components/_menu.scss
+++ b/dev/scss/components/_menu.scss
@@ -73,8 +73,8 @@
     @include from(medium) {
       position: relative;
       align-items: center;
-      padding-left: 1em;
-      padding-right: 1em;
+      padding-left: .5em;
+      padding-right: .5em;
       padding-top: initial;
       padding-bottom: initial;
       color: var(--color-white);
@@ -89,7 +89,7 @@
         content: '';
         position: absolute;
         left: 0;
-        border-radius: .5em;
+        border-radius: 1em;
         bottom: 0;
         width: 100%;
         height: .25em;
