Configura los títulos de las secciones para que sean dinamicos.

--- a/dev/pug/includes/section-services.pug
+++ b/dev/pug/includes/section-services.pug
@@ -1,7 +1,7 @@
 // ------------ Section services ---------------- 
 section(class="services  l-section")
   div.l-container
-    h2(class="services__subtitle  center-content" id="services")= 'Servicios'.toUpperCase()
+    h2(class="services__subtitle  center-content" id="services")= pages[2].title.toUpperCase()
     +glide([
       { 
         nameFile: 'software', 
