--- a/dev/pug/includes/section-aboutUs.pug
+++ b/dev/pug/includes/section-aboutUs.pug
@@ -5,7 +5,7 @@ section.about-us.l-section
       img.about-us__image(src="images/section-about-us.svg", alt="Imagen de la sección Nosotros")
     
     div.about-us__content
-      h2.about-us__subtitle#aboutUs= `${'Nosotros'.toUpperCase()}`
+      h2.about-us__subtitle#aboutUs= pages[1].title.toUpperCase()
       div.about-us__text
         p 
           span.strong INOUTI SOLUCIONES TI 
