Refactoriza los estilos y la estructura.

--- a/dev/pug/includes/main-footer.pug
+++ b/dev/pug/includes/main-footer.pug
@@ -1,7 +1,6 @@
 // ----------- main footer -----------  
 footer.main-footer.l-section.shadow
-  div.l-container
-    div.container.center-content
+  div.l-container.center-content
       h2(class="main-footer__subtitle  center-content")= `Soporte ${siteName}`.toUpperCase()
       
       div.main-footer__contact
