--- a/dev/scss/components/_footer.scss
+++ b/dev/scss/components/_footer.scss
@@ -1,47 +1,40 @@
 .main-footer {
   border-radius: 1em;
   margin-bottom: 2em;
-  padding-top: 4em; // 64px
   background-color: var(--color-text);
   overflow: hidden;
-  div.l-container { flex-direction: column; }
-  .container { 
-    padding-left: 1em;
-    padding-right: 1em;
-    margin-bottom: 4em; // 64px
-
+  
+  .l-container { 
+    --padding: 1em;
+    padding-top: 4em; // 64px
+    padding-left: var(--padding);
+    padding-right: var(--padding);
+    padding-bottom: 4em; // 64px
+    flex-direction: column; 
+    
     @include from(medium) {
       display: flex;
+      flex-direction: row;
       flex-wrap: wrap;
-      padding-left: 0;
-      padding-right: 0; 
     }
   }
   &__subtitle { 
     margin-top: 0;
     margin-bottom: 4em;
     color: var(--color-primary); 
-    @include from(medium) {
-      width: 100%;
-    }
+    
+    @include from(medium) { width: 100%; }
   }
   &__contact {  
     flex-basis: 50%;
-    @include from(large) {
-      flex-basis: 33.333333333333336%;
-    }
+    @include from(large) { flex-basis: 33.333333333333336%; }
   }
   &__socialnetworks { 
     flex-basis: 50%; 
-    @include from(large) {
-      flex-basis: 33.333333333333336%;
-    }
+    @include from(large) { flex-basis: 33.333333333333336%; }
   }
   &__services {
     width: 100%;
-    @include from(large) {
-      flex-basis: 33.333333333333336%;
-    }
     ul {
       margin-top: 0;
       margin-bottom: 0;
@@ -52,6 +45,8 @@
         &:not(:last-child) { margin-bottom: 1em; }
       }
     }
+
+    @include from(large) { flex-basis: 33.333333333333336%; }
   }
   &__credits {
     background-color: var(--color-text2);
