--- a/dev/scss/components/_form.scss
+++ b/dev/scss/components/_form.scss
@@ -2,8 +2,8 @@
 .form-container {
   border-radius: .5em;
   background-color: var(--color-text);
-  padding: 2.5em 1.5em;
-  @include from(medium) { padding: 5.5em 2em; }
+  padding: 3.5em 1.5em;
+  @include from(medium) { padding: 4.5em 2em; }
 
   .title {
     display: block;
@@ -13,7 +13,10 @@
     font-family: var(--font-title);
     letter-spacing: var(--letter-spacing);
   }
-  .text { color: var(--color-primary); }
+  .text { 
+    margin: 0;
+    color: var(--color-primary); 
+  }
 }
 
 
@@ -27,7 +30,7 @@
     overflow: hidden;
 
     .icon {
-      padding: 1em 1em;
+      padding: 1em 1.5em;
       background-color: var(--color-text2);
     }
     input { 
