--- a/dev/pug/config/template.pug
+++ b/dev/pug/config/template.pug
@@ -1,6 +1,6 @@
 block config
   include variables
-  include /mixins/banner-mixin
+  include /mixins/banner
   include /mixins/form
   include /mixins/button-contact-mixin
   include /mixins/card-services
