--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -4,14 +4,12 @@
 .main-banner {
   position: relative;
   padding: 2em 1em;
-  @include from(medium) {
-    padding: 2em 3em;
-  }
+  @include from(medium) { padding: 2em 2em; }
   background-color: var(--color-primary);
   border-radius: 1em;
   overflow: hidden;
   box-shadow: $shadow;
-  div.l-container {}
+  
   &__hero-image {
     position: absolute;
     top: 0;
@@ -27,8 +25,10 @@
     max-width: 24em;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 
     @include from(medium) {
+      > *:first-child { margin-right: 1em; }
       display: flex;
       max-width: initial;
       margin-left: initial;
@@ -41,16 +41,12 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      flex-basis: 60%;
+      flex-basis: 40%;
     }
+    @include from(1000px) { flex-basis: 50%; }
     
     text-align: center;
     @extend %text-white;
-  }
-  .form-container {
-    @include from(medium) {
-      flex-basis: 40%;
-    }
   }
   &__title {
     @include from(medium) {
@@ -65,7 +61,11 @@
     @include from(medium) {
       text-align: left;
       margin: 0;
-      width: 22em;
+      max-width: 22em;
     }
+  }
+  .form-container {
+    flex-basis: 60%;
+    @include from(1000px) { flex-basis: 50%; }
   }
 }
