--- a/dev/scss/config/_variables.scss
+++ b/dev/scss/config/_variables.scss
@@ -74,3 +74,6 @@ $shadow: rgba($color-text2, .2) 0 .25em .5em;
 .b-shadow { 
   box-shadow: rgba($color-text, .2) 0  0.25em 0.5em; // 0 4px 8px 
 }
+.strong {
+  font-family: 'Roboto-Medium';
+}
