--- a/dev/scss/components/_banner.scss
+++ b/dev/scss/components/_banner.scss
@@ -1,6 +1,7 @@
 %text-white {
   color: var(--color-white);
 }
+
 .main-banner {
   position: relative;
   padding: 2em 1em;
@@ -52,7 +53,7 @@
     @include from(medium) {
       text-align: left;
       margin: 0;
-      margin-bottom: 1em;
+      margin-bottom: .5em;
       width: 50%;
     }
   }
