--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -3,10 +3,13 @@
 *:before,
 *::after,
 *::before { box-sizing: border-box; }
+:root {
+  font-family: var(--font-content);
+  font-size: 16px;
+}
 body {
   padding: 2rem 1rem 1rem;
   background-color: var(--color-bg);
-  font-family: var(--font-content);
   font-size: var(--body-font-size);
 }
 img {
