--- a/dev/scss/config/_variables.scss
+++ b/dev/scss/config/_variables.scss
@@ -35,7 +35,7 @@ $color-white: #FAFAFA;
   --h1-font-size: 1.953em;
   --h2-font-size: 1.563em;
   --h3-font-size: 1.25em;
-  --body-font-size: 16px; // 1em
+  --body-font-size: 1em;
   --smaller-font-size: .8em;
   --small-font-size: .64em;
 
