--- a/dev/pug/includes/section-services.pug
+++ b/dev/pug/includes/section-services.pug
@@ -1,26 +1,4 @@
 // ------------ Section services ---------------- 
-section(class="services  l-section")
-  div.l-container
-    h2(class="services__subtitle  center-content" id="services")= pages[2].title.toUpperCase()
-    +glide([
-      { 
-        nameFile: 'software', 
-        title: 'Soporte a usuarios y equipos', 
-        text: 'Incidencias relacionadas con problemas de configuración, bloqueo, mal funcionamiento del sistema operativo (Windows), aplicaciones, correo electrónico, navegadores, sistemas antivirus, etc.'
-      },
-      {
-        nameFile: 'hardware', 
-        title: 'Mantenimiento del equipo de cómputo', 
-        text: 'Ofrecemos un plan de mantenimiento preventivo y soporte correctivo de sus computadoras, servidores, impresoras etc.'
-      },
-      {
-        nameFile: 'code',
-        title: 'Diseño y desarrollo web',
-        text: 'Diseño y construcción de sitios web con un "look and feel" genérico y exclusivo para su empresa.'
-      },
-      {
-        nameFile: 'red', 
-        title: 'Instalación de redes LAN', 
-        text: 'Instalación de cableado con presupuesto exclusivo para su empresa.'
-      }
-    ], 'services', 'js-glide-services')
+section(class="services  l-section" id="js-services")
+  h2(class="services__subtitle  center-content" id="services")= pages[2].title.toUpperCase()
+  div(class="l-container")
