--- a/dev/scss/components/_services.scss
+++ b/dev/scss/components/_services.scss
@@ -1,37 +1,18 @@
 .services {
   &__subtitle {
     margin-top: 0;
-    margin-bottom: 1em;
     color: var(--color-primary);
     width: 100%;
   }
   @include from(medium) {
     --columns:  2;
-    .glide {
-      &__track { overflow: initial; }
-      &__slides { 
-        display: grid; 
-        grid-template-columns: repeat(var(--columns), 1fr);
-        grid-column-gap: 1em;
-        grid-row-gap: 1.5em;
-        margin: 0; // Estilos de la libreria.
-        transition: none !important; // Estilos de la libreria.
-        transform: none !important; // Estilos de la libreria.
-        width: 100% !important; // Estilos de la libreria.
-        overflow: initial !important; // Estilos de la libreria.
-      }
-      &__slide {
-        width: 100% !important; // Estilos de la libreria.
-        margin: 0 !important; // Estilos de la libreria.
-      }
-      &__arrows { display: none; }
+
+    &__grid { 
+      display: grid; 
+      grid-template-columns: repeat(var(--columns), 1fr);
+      grid-gap: 1em;
     }
   }
-  @include from(900px) {
-    --columns: 3;
-
-  }
-  @include from(large) {
-    --columns: 4;
-  }
+  @include from(900px) { --columns: 3; }
+  @include from(large) { --columns: 4; }
 }
