Agrega los colores para la plantilla por defecto, los colores están comentados.

--- a/dev/pug/includes/section-aboutUs.pug
+++ b/dev/pug/includes/section-aboutUs.pug
@@ -3,6 +3,7 @@ section.about-us.l-section
   div.l-container
     div.container-image
       img.about-us__image(src="images/section-about-us.svg", alt="Imagen de la sección Nosotros")
+      //- img.about-us__image(src="images/section-about-us-blue.svg", alt="Imagen de la sección Nosotros")
     
     div.about-us__content
       h2.about-us__subtitle#aboutUs= pages[1].title.toUpperCase()
