--- a/dev/pug/mixins/card-services.pug
+++ b/dev/pug/mixins/card-services.pug
@@ -1,5 +1,7 @@
 mixin cardServices(id, name, title, description)
+  //- Este mixing no se usa pero funciona muy bien. Ahora las card se crean con js.
   div(class="card-services  b-shadow" id="js-card-service")
-    img(class="card-services__image" src=`images/section-service-${name}.svg` alt="Imagen, servicios de soporte a usuarios y equipos.")
+    //- img(class="card-services__image" src=`images/section-service-${name}.svg` alt="Imagen, servicios de soporte a usuarios y equipos.")
+    img(class="card-services__image" src=`images/section-service-${name}-blue.svg` alt="Imagen, servicios de soporte a usuarios y equipos.")
     h3.card-services__subtitle= title
     p(class="card-services__text" id=`js-text${id}`)= description
