--- a/dev/scss/components/_card.scss
+++ b/dev/scss/components/_card.scss
@@ -8,6 +8,9 @@
 }
 
 .card-services {
+  &:nth-child(2) &__subtitle {
+    word-break: break-all;
+  }
   @extend %card-style-repeat;
   margin-right: auto;
   margin-left: auto;
