--- a/dev/scss/components/_icons.scss
+++ b/dev/scss/components/_icons.scss
@@ -1,3 +1,4 @@
+/* Brand color palette */
 $color-primary: invert(66%) sepia(25%) saturate(6026%) hue-rotate(360deg) brightness(103%) contrast(105%);
 $color-second: invert(45%) sepia(87%) saturate(2573%) hue-rotate(5deg) brightness(98%) contrast(100%);
 $color-accent: invert(34%) sepia(41%) saturate(6939%) hue-rotate(219deg) brightness(99%) contrast(104%);
@@ -5,6 +6,10 @@ $color-white: invert(100%) sepia(0%) saturate(7500%) hue-rotate(8deg) brightness
 $color-whatsapp: invert(70%) sepia(8%) saturate(7168%) hue-rotate(71deg) brightness(93%) contrast(54%);
 $color-facebook: invert(33%) sepia(70%) saturate(4356%) hue-rotate(197deg) brightness(95%) contrast(80%);
 $color-gmail: invert(32%) sepia(78%) saturate(2179%) hue-rotate(341deg) brightness(98%) contrast(96%);
+/* template default color blue */
+// $color-primary: invert(45%) sepia(75%) saturate(1624%) hue-rotate(184deg) brightness(98%) contrast(94%);
+// $color-second: invert(29%) sepia(46%) saturate(5123%) hue-rotate(185deg) brightness(91%) contrast(98%);
+// $color-accent: invert(28%) sepia(58%) saturate(3641%) hue-rotate(220deg) brightness(101%) contrast(102%);
 
 [class*=icon-] {
   display: flex;
